# concourse-kit

./: .gitignore  README.md  cck.py  pubkey.cert  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
concoursekit/: __init__.py
concoursekit/concoursekit/: concoursekit.py
pipeline_tests/: foo_mgmt_test.py
pipelines/: bar_mgmt.py  foo_mgmt.py
tests/: .cck.yml  cck_test.py  generate_pipeline_test.py  set_pipeline_plan_test.py  set_pipeline_test.py  set_pipelines_test.py
tests/pipeline_tests/: bar_mgmt_test.py
tests/pipelines/: bar_mgmt.py  baz_mgmt.py  foo_mgmt.py  zoo_mgmt.py
tests/target-environments/dev/: vars.yml
tests/target-environments/prod/: vars.yml
tests/target-environments/sandbox/: vars.yml
tests/target-environments/stage/: vars.yml
