[metadata]
name = concoursekit
version = 0.0.6
author = Anthony Hawkins
author_email = ahawkins.mail@gmail.com
description = Concourse Kit is a Concourse CI Pipeline Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anthonyhawkins/concourse-kit
project_urls =
    Bug Tracker = https://github.com/anthonyhawkins/concourse-kit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = concoursekit
packages = find:
python_requires = >=3.9
install_requires =
    yamlmaker

[options.packages.find]
where = concoursekit